@@ -127,6 +127,7 @@
       <xs:attribute name="icon" type="xs:string" default="" />
       <xs:attribute name="configFile" type="xs:string" default="" />
       <xs:attribute name="version" type="xs:string" default="1.0.0" />
+      <xs:attribute name="guid" type="xs:string"/>
       <xs:attribute name="language" default="C#">
         <xs:simpleType>
           <xs:restriction base="xs:string">
